# opescare

./: .snyk  OPESCARE_CONNECT_PLATFORM_API_SDK_BRIDGE_WIDGET_WEBHOOKS.md  OPESCARE_DEMO_ACCESS_COMPLETE_FIXED.md  OPESCARE_FULL_IMPLEMENTATION_AUDIT_CHECKLIST.md  OPESCARE_MEDICAL_ID_SYSTEM_FINAL.md  OPESCARE_VERIFIABLE_DOCUMENT_TEMPLATES_V2.md  OPESCARE_VERIFIED_CARE_ACCESS_MAP.md  PLATFORM_FLOW_AUDIT.md  PRODUCTION_READINESS_REPORT.md  opescare master prompt.md  opescare_public_pages_blueprint.md  opescare_technical_document.md  opescare_uiux_product_interface_translate_prd.md  patch_diagnosis.php
.github/: dependabot.yml
.gstack/: browse-audit.jsonl
.pdf-tmp/: package-lock.json  package.json
bridge-agent/: bridge_config.example.json  config.json  pyproject.toml
bridge-agent/opescare_bridge/: __init__.py  auth.py  config.py  daemon.py
bridge-agent/opescare_bridge/connectors/: __init__.py  csv_connector.py
bridge-agent/opescare_bridge/queue/: __init__.py  local_queue.py
bridge-agent/opescare_bridge/sync/: __init__.py  heartbeat.py  syncer.py
bridge-agent/opescare_bridge_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridge-agent/tests/: test_csv_connector.py  test_local_queue.py  test_syncer.py
sdk/python/: pyproject.toml
sdk/python/src/opescare/: __init__.py  client.py  exceptions.py
sdk/python/src/opescare/auth/: __init__.py  token_manager.py
sdk/python/src/opescare/http/: api_client.py
sdk/python/src/opescare/modules/: __init__.py  consents.py  fhir.py  health_ids.py  patients.py  records.py  webhooks.py
sdk/python/src/opescare_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: test_api_client.py  test_exceptions.py  test_webhooks.py
(+2307 files in other folders)
