[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opescare-bridge-agent"
version = "1.0.0"
description = "OpesCare Bridge Agent — syncs local facility data to the OpesCare interoperability platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["opescare", "healthcare", "interoperability", "bridge-agent", "fhir"]
dependencies = [
    "requests>=2.31.0",
    "watchdog>=4.0.0",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
]

[project.scripts]
opescare-bridge = "opescare_bridge.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opescare_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=opescare_bridge --cov-report=term-missing"
