[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opescare-sdk"
version = "1.0.0"
description = "Official OpesCare Connect Suite Python SDK — Health ID, Patients, Consents, Records, FHIR R4, Webhooks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["opescare", "healthcare", "fhir", "health-id", "interoperability", "cdss"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "pytest-httpx>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
